# covers-api-rs

./: .env  Cargo.toml  NOTES.md  PROVIDERS.md  README.md  ROADMAP.md  diesel.toml  openapi.yaml
migrations/2024-05-24-071153_initialize/: down.sql  up.sql
src/: config.rs  cover.rs  db.rs  error.rs  image.rs  main.rs  provider.rs  schema.rs
src/api/: mod.rs  public.rs  worker.rs
