[package]
name = "covers-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# DB
diesel = {version="2.2", features=["mysql", "mysql_backend", "chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"]}
diesel_migrations = {version="2.2", features=["mysql"]}
deadpool-diesel = {version="0.6", features=["mysql"]}
chrono = {version="0.4", default-features=false, features=["clock", "std", "serde", "now"]}
# Clients API
reqwest = {version="0.12", default-features=false}
## Task tracker API client if using task-tracker-rs API type, should be behind feature but at least one is required.
tasks-tracker-client = {git = "https://github.com/Cyrix126/tasks-tracker"}
## Product API client if using Dolibarr API type, should be behind feature but at least one is required.
doli-client-api-rs = {git = "https://github.com/Cyrix126/doli-client-api-rs"}
# Cover Provider
# configuration file
get_pass = {git = "https://github.com/Cyrix126/get_pass"}
confy = "0.6"
serde = { version = "1", features = ["derive"] }
# Server
tokio = {version="1", default-features=false, features= ["rt-multi-thread", "fs", "io-util", "sync"] }
tokio-util = {version="0.7.11", features=["io"]}
axum = {version="0.7", default-features= false, features= ["tokio", "http2", "json", "macros"] }
tower-http = {version="0.5.2", features=["fs"]}
# Common
anyhow = "1.0"
thiserror = "1.0"

derive_more = {version="0.99", default-features=false, features=["display"]}
enclose = "1.2"
cfg-if ="1.0"
strum = "0.26"
strum_macros = "0.26"
# Cover
image = {version = "0.25", default-features=false, features = ["jpeg", "png", "tiff", "webp"]}
axum_thiserror = "0.1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
## task tracker api, product api, cache api variants should be in features. But at least one is always needed.
default=["openlibrary"]
## Cover provider
openlibrary=[]
